--- a/DZ1/.eslintrc.json
+++ b/DZ1/.eslintrc.json
@@ -7,11 +7,10 @@
     "extends": ["eslint:recommended", "prettier"],
     "plugins": ["prettier"],
     "parserOptions": {
-        "ecmaVersion": 2020
+        "ecmaVersion": 2020,
+        "sourceType": "module"
     },
     "rules": {
-        "no-undef": "off",
-        //"prettier/prettier": "error",
         "camelcase": ["error"],
         "eqeqeq": ["error", "always"]
     }
